--- a/main.tex
+++ b/main.tex
@@ -1376,7 +1376,7 @@ degradation in performance with increase in temperature in GPT-4o, with the
 highest performance observed at the lowest temperature. This decline is
 slightly more pronounced in the CASE Ontology. Similar performance trends are
 not observed for Llama3-8B. Performing Welch's T-test for statistically
-significant performance variation across both LLMs and ontologies against the
+significant performance difference across both LLMs and ontologies against the
 default value of $0.6$,
 
 Looking at the
