--- a/main.tex
+++ b/main.tex
@@ -1377,7 +1377,9 @@ highest performance observed at the lowest temperature. This decline is
 slightly more pronounced in the CASE Ontology. Similar performance trends are
 not observed for Llama3-8B. Performing Welch's T-test for statistically
 significant performance difference across both LLMs and ontologies against the
-default value of $0.6$,
+default value of $0.6$, we find performance differences observed by GPT-4o to
+be statistically significant for the Wines Ontology at temperatures of 0.0,
+0.8 and 1.0 and, for the CASE Ontology at all temperatures.
 
 Looking at the
 average scores and the influence of temperature on them, we observed no
