--- a/main.tex
+++ b/main.tex
@@ -1379,7 +1379,9 @@ not observed for Llama3-8B. Performing Welch's T-test for statistically
 significant performance difference across both LLMs and ontologies against the
 default value of $0.6$, we find performance differences observed by GPT-4o to
 be statistically significant for the Wines Ontology at temperatures of 0.0,
-0.8 and 1.0 and, for the CASE Ontology at all temperatures.
+0.8 and 1.0 and, for the CASE Ontology at all temperatures. The same test were
+found to be statistically insignificant in all scenarios for Llama3-8B except
+on the Wines Ontology at temperature 0.0. 
 
 Looking at the
 average scores and the influence of temperature on them, we observed no
