--- a/main.tex
+++ b/main.tex
@@ -1384,7 +1384,8 @@ found to be statistically insignificant in all scenarios for Llama3-8B except
 on the Wines Ontology at temperature 0.0.
 
 Our response variation analysis shows a reduction in average performance with
-increase in temperature for GPT-4o. The same trend is not observed for Llama3-8B.
+increase in temperature for GPT-4o. The same trend is not observed for
+Llama3-8B. 
 
 For both ontologies, we observe a reduction in average performance with
 increase in temperature with GPT-4o. A similar trend is not observed for
