--- a/main.tex
+++ b/main.tex
@@ -1385,7 +1385,25 @@ on the Wines Ontology at temperature 0.0.
 
 Our response variation analysis shows a reduction in average performance with
 increase in temperature for GPT-4o. The same trend is not observed for
-Llama3-8B. 
+Llama3-8B.
+% case-uco-owl-trafficking gpt-4o t0.0
+% (M = 0.79, SD = 0.01), t(18) = 26.0, p < 0.001
+% case-uco-owl-trafficking gpt-4o t0.2
+% (M = 0.77, SD = 0.01), t(18) = 16.0, p < 0.001
+% case-uco-owl-trafficking gpt-4o t0.4
+% (M = 0.78, SD = 0.01), t(18) = 15.7, p < 0.001
+% case-uco-owl-trafficking gpt-4o t0.8
+% (M = 0.70, SD = 0.01), t(18) = 9.7, p < 0.001
+% case-uco-owl-trafficking gpt-4o t1.0
+% (M = 0.58, SD = 0.02), t(18) = 31.5, p < 0.001
+% wines-ontology llama3-8B t0.0
+% (M = 0.70, SD = 0.03), t(18) = 3.9, p < 0.001
+% wines-ontology gpt-4o t0.0
+% (M = 0.90, SD = 0.00), t(18) = 8.9, p < 0.001
+% wines-ontology gpt-4o t0.8
+% (M = 0.84, SD = 0.01), t(18) = 15.5, p < 0.001
+% wines-ontology gpt-4o t1.0
+% (M = 0.79, SD = 0.02), t(18) = 16.4, p < 0.001
 
 For both ontologies, we observe a reduction in average performance with
 increase in temperature with GPT-4o. A similar trend is not observed for
