--- a/main.tex
+++ b/main.tex
@@ -1147,11 +1147,11 @@ conditions, LLMs are able to predict the directly-asserted concepts for all
 ontologies ($\text{mAP@1}$) but struggle with predicting complete hierarchies
 ($\text{mAP@D}$), particularly on the CASE ontology. Manually inspecting the
 nature of predicted hierarchies in the zero-shot setting, we do observe a
-large tendency to predict hierarchies based on string similarity. Figure
-\ref{fig:lexical-prediction-hierarchy} showcases the preference for string
-similarity when predicting hierarchies for an individual of the CASE
-ontology. The influence of string similarity is reduced in the few-shot
-experiments.
+large tendency to predict hierarchies based on string similarity.
+% Figure\ref{fig:lexical-prediction-hierarchy} showcases the preference for
+% string similarity when predicting hierarchies for an individual of the CASE
+% ontology.
+The influence of string similarity is reduced in the few-shot experiments.
 
 Entity labels greatly influence the ability of LLMs to perform ontology
 population. When the semantic separation between the two types of entities is
@@ -1160,42 +1160,42 @@ inclusion of examples during prompting robustly counters the effects of entity
 embedding separation and reduces susceptibility to resorting to string
 matching for making predictions.
 
-\begin{figure}
-    \centering
-    \begin{subfigure}[b]{0.45\textwidth}
-      \begin{minipage}{\textwidth}
-    \mydirtree{%
-    .1 UcoThing.
-        .2 UcoInherentCharacterizationThing.
-            .3 Facet.
-                .4 \textbf{AccountFacet}.
-    }
-  \end{minipage}
-  \caption{}
-    % \caption{Ground Truth Hierarchy for `AccountFacet'}
-    \end{subfigure}
-    \begin{subfigure}[b]{0.45\textwidth}
-    \begin{minipage}{\textwidth}
-    \mydirtree{%
-    .1 \hlorange{MobileDeviceFacet}.
-      .2 \hlorange{AccountAuthenticationFacet}.
-         .3 \hlorange{SIMCardFacet}.
-           .4 \hlorange{PhoneAccountFacet}.
-             .5 \hlorange{EmailAccountFacet}.
-               .6 \hlorange{MobileAccountFacet}.
-                  .7 \hlorange{DigitalAccountFacet}.
-                    .8 \textbf{AccountFacet}.
-    }
-  \end{minipage}
-  \caption{}
-    % \caption{GPT-4o, zero-shot, generic contextualization prediction hierarchy for `AccountFacet' taken from individual correctly identified as instance of `AccountFacet'. Concepts in \hlorange{orange} are siblings of `AccountFacet'}
-    \end{subfigure}
-    \caption{a) Ground truth hierarchy of the `AccountFacet' concept from the
-      CASE Ontology b) GPT-4o zero-shot predicted hierarchy for an individual
-      of `AccountFacet'. Concepts highlighted in orange are incorrect
-      hierarchy predictions. }
-    \label{fig:lexical-prediction-hierarchy}
-  \end{figure}
+% \begin{figure}
+%     \centering
+%     \begin{subfigure}[b]{0.45\textwidth}
+%       \begin{minipage}{\textwidth}
+%     \mydirtree{%
+%     .1 UcoThing.
+%         .2 UcoInherentCharacterizationThing.
+%             .3 Facet.
+%                 .4 \textbf{AccountFacet}.
+%     }
+%   \end{minipage}
+%   \caption{}
+%     % \caption{Ground Truth Hierarchy for `AccountFacet'}
+%     \end{subfigure}
+%     \begin{subfigure}[b]{0.45\textwidth}
+%     \begin{minipage}{\textwidth}
+%     \mydirtree{%
+%     .1 \hlorange{MobileDeviceFacet}.
+%       .2 \hlorange{AccountAuthenticationFacet}.
+%          .3 \hlorange{SIMCardFacet}.
+%            .4 \hlorange{PhoneAccountFacet}.
+%              .5 \hlorange{EmailAccountFacet}.
+%                .6 \hlorange{MobileAccountFacet}.
+%                   .7 \hlorange{DigitalAccountFacet}.
+%                     .8 \textbf{AccountFacet}.
+%     }
+%   \end{minipage}
+%   \caption{}
+%     % \caption{GPT-4o, zero-shot, generic contextualization prediction hierarchy for `AccountFacet' taken from individual correctly identified as instance of `AccountFacet'. Concepts in \hlorange{orange} are siblings of `AccountFacet'}
+%     \end{subfigure}
+%     \caption{a) Ground truth hierarchy of the `AccountFacet' concept from the
+%       CASE Ontology b) GPT-4o zero-shot predicted hierarchy for an individual
+%       of `AccountFacet'. Concepts highlighted in orange are incorrect
+%       hierarchy predictions. }
+%     \label{fig:lexical-prediction-hierarchy}
+%   \end{figure}
   
 
 
