--- a/main.tex
+++ b/main.tex
@@ -1146,7 +1146,7 @@ Looking at Table \ref{tab:results}, we observe that under, zero-shot
 conditions, LLMs are able to predict the directly-asserted concepts for all
 ontologies ($\text{mAP@1}$) but struggle with predicting complete hierarchies
 ($\text{mAP@D}$), particularly on the CASE ontology. Manually inspecting the
-nature of predicted hierarchies in the zero-shot setting, we do observe a
+nature of predicted hierarchies in the zero-shot setting, we observed a
 large tendency to predict hierarchies based on string similarity.
 % Figure\ref{fig:lexical-prediction-hierarchy} showcases the preference for
 % string similarity when predicting hierarchies for an individual of the CASE
