--- a/main.tex
+++ b/main.tex
@@ -1109,22 +1109,23 @@ LLMs. The performance in Table \ref{tab:results} supports our hypothesis with
 performance on the the CASE Ontology being significantly lower than the other
 two ontologies in the zero-shot scenario and when using one or two examples
 for few-shot prompting. Beyond that, the provision of more examples in
-few-shot counters the effects of this entity semantic separation. The semantic
-separation of the entities of the CASE Ontology is visually confirmed through
-a two-dimensional t-SNE \cite{van2008VisualizingData} projection of the
-entities of the three ontologies in Figure
-\ref{fig:entity-semantic-separation}. The individuals of the CASE Ontology are
-well-separated from its concepts in the lower right-hand corner of the
-Figure. No such separation is observable for the entities of the other two
-ontologies.
+few-shot counters the effects of this entity semantic separation.
 
-\begin{figure}[H]
-  \centering
-  \caption{TSNE projection of concepts and individual label embeddings of
-    ontologies on 2 components}
-  \label{fig:entity-semantic-separation}
-  \includegraphics[scale=0.26]{assets/all_entity_semantic_similarity.pdf}
-\end{figure}
+% The semantic separation of the entities of the CASE Ontology is visually
+% confirmed through a two-dimensional t-SNE \cite{van2008VisualizingData}
+% projection of the entities of the three ontologies in Figure
+% \ref{fig:entity-semantic-separation}. The individuals of the CASE Ontology are
+% well-separated from its concepts in the lower right-hand corner of the
+% Figure. No such separation is observable for the entities of the other two
+% ontologies.
+
+% \begin{figure}[H]
+%   \centering
+%   \caption{TSNE projection of concepts and individual label embeddings of
+%     ontologies on 2 components}
+%   \label{fig:entity-semantic-separation}
+%   \includegraphics[scale=0.26]{assets/all_entity_semantic_similarity.pdf}
+% \end{figure}
 
 For our supplementary investigation of the extent string similarity can be
 leveraged by LLM for ontology population, we compute the compute the
