--- a/main.tex
+++ b/main.tex
@@ -823,10 +823,13 @@ We evaluate response variation in terms of statistical consistency at
 different temperature settings under specific values of different factors.
 Our approach involves statistical consistency evaluation of the LLM responses
 in terms of mAP at several temperature values: 0.0, 0.2, 0.4, 0.6, 0.8,
-1.0. Statistical consistency is measured across 10 repetitions at each
-temperature value. Lower temperature values (< 0.5) highlight performance
-variation at low response variability while higher values ($\geq$ 0.5)
-illustrate performance variation when response variation is encouraged.
+1.0. We investigate response variation using GPT-4o and Llama3-8B on the Wines
+and CASE ontologies with a 3-shot prompting approach utilizing an ontology
+domain contextualiztion. Statistical consistency is measured across 10
+repetitions at each temperature value. Lower temperature values (< 0.5)
+highlight performance variation at low response variability while higher
+values ($\geq$ 0.5) illustrate performance variation when response variation
+is encouraged.
 
 % Due to resource restrictions, we were unable to perform similar experiments
 % with o1-preview and DeepSeek R1-Distil-Llama-8B and leave it for future
