--- a/main.tex
+++ b/main.tex
@@ -1427,8 +1427,8 @@ fine-tuning. More detailed analysis of individual Ontology-based and LLM-based
 factors and their interactions highlights the following:
 \begin{itemize}
 \item Structural complexity of ontologies in terms of size and, depth and
-  dispersion of concepts does not seem to affect an LLM's
-  ability to perform ontology population.
+  dispersion of concepts does not seem to affect an LLM's ability to perform
+  ontology population.
 \item \chreplaced[id=UB, comment={Including lexical similarity}]{LLMs are susceptible to resorting to lexical matching when they cannot rely on their interpretation of entity labels.}{Disparity between an LLM's interpretation of concepts and instances has a detrimental effect on the performance of LLM-driven ontology population.}
     \item Larger LLMs outperform smaller LLMs. Reasoning LLMs can potentially perform ontology population better, but conventional LLMs can perform equally well in few-shot settings. A smaller reasoning model reported the worst overall performance, which requires further investigation.
     %indicates either a strong negative interaction between the reasoning type and the size of the model or the need for alternative prompting strategy to utilize such LLMs to their full potential.
