--- a/main.tex
+++ b/main.tex
@@ -1423,7 +1423,7 @@ three domain ontologies and several LLMs. Through extensive experimentation
 utilizing only their own pre-learnt knowledge and in-context learning.
 A detailed analysis of the explored factors highlights the following:
 \begin{itemize}
-\item Structural complexity of ontologies in terms of size and, depth and
+\item Structural complexity of ontologies in terms of size, depth and
   dispersion of concepts does not seem to affect an LLM's ability to perform
   ontology population.
 \item \chreplaced[id=UB, comment={Including lexical similarity}]{LLMs are susceptible to resorting to lexical matching when they cannot rely on their interpretation of entity labels.}{Disparity between an LLM's interpretation of concepts and instances has a detrimental effect on the performance of LLM-driven ontology population.}
