--- a/main.tex
+++ b/main.tex
@@ -1426,6 +1426,9 @@ A detailed analysis of the explored factors highlights the following:
 \item Structural complexity of ontologies in terms of size and of depth and
   dispersion of concepts does not seem to affect an LLM's ability to perform
   ontology population.
+\item LLMs are capable of identifying directly-asserted concepts but often
+ struggle with predicting correct hierarchies. Addition of contextual examples
+ overcomes this shortcoming.
 \item \chreplaced[id=UB, comment={Including lexical similarity}]{LLMs are susceptible to resorting to lexical matching when they cannot rely on their interpretation of entity labels.}{Disparity between an LLM's interpretation of concepts and instances has a detrimental effect on the performance of LLM-driven ontology population.}
     \item Larger LLMs outperform smaller LLMs. Reasoning LLMs can potentially perform ontology population better, but conventional LLMs can perform equally well in few-shot settings. A smaller reasoning model reported the worst overall performance, which requires further investigation.
     %indicates either a strong negative interaction between the reasoning type and the size of the model or the need for alternative prompting strategy to utilize such LLMs to their full potential.
