--- a/main.tex
+++ b/main.tex
@@ -1449,8 +1449,8 @@ A detailed analysis of the explored factors highlights the following:
   benefits obtained with three or four examples.
 \item When an LLM's lexical understanding of an ontology's entities diverges
   from their ontological nature and string-based similarity cannot be used to
-  infer hierarchies, few-shot prompting is an effective tool to mitigate
-these differences and improve performance.
+  infer hierarchies, few-shot prompting is an effective tool to mitigate these
+  differences and improve performance.
     % \item Domain contextualization variants favoring ontological structure perform better than other variants.
     % \item We have not been able to determine a domain contextualization strategy that consistently outperforms other strategies. On aggregate, our experimentation highlights domain contextualization as providing better results. However, more experimentation is required to establish stronger trends.
     \item Our experimentation with domain contextualization strategies shows stronger benefits of the ontology domain contextualization in most scenarios. However, the observed differences in performance are fairly marginal.
