--- a/main.tex
+++ b/main.tex
@@ -1451,11 +1451,10 @@ A detailed analysis of the explored factors highlights the following:
   from their ontological nature and string-based similarity cannot be used to
   infer hierarchies, few-shot prompting is an effective tool to mitigate these
   differences and improve performance.
-    % \item Domain contextualization variants favoring ontological structure perform better than other variants.
-    % \item We have not been able to determine a domain contextualization strategy that consistently outperforms other strategies. On aggregate, our experimentation highlights domain contextualization as providing better results. However, more experimentation is required to establish stronger trends.
-    \item Our experimentation with domain contextualization strategies shows stronger benefits of the ontology domain contextualization in most scenarios. However, the observed differences in performance are fairly marginal.
-    % \item Ontology-centric domain contextualization outperforms other strategies however the differences in perfor
-    % \item Larger LLMs are fairly robust to temperature variation and provide consistent results with very little variability. Smaller LLMs exhibit high degree of variability. Lower temperature values do not result in lower $mAP@D$ variability.
+\item Our experimentation with domain contextualization strategies shows
+  stronger benefits of the ontology domain contextualization in most
+  scenarios. However, the observed differences in performance are fairly
+  marginal.
     \item LLMs are relatively insensitive to temperature variation. Higher temperature does not cause higher variance, but does result in a reduced average performance. Lowering temperature from the default has no effect on results.
     \item Larger LLMs are consistent across several repetitions. Smaller LLMs exhibit much larger variability in this regard.
 
