--- a/main.tex
+++ b/main.tex
@@ -82,7 +82,7 @@ The abstract should briefly summarize the contents of the paper in
 %
 \section{Introduction}
 \label{sec:introduction}
-Manual population of ontologies is a time and effort-intensive process
+Manual curation of ontologies is a time and effort-intensive process
 requiring significant expertise in a target domain and knowledge engineering.
 Automated ontology learning aims to expedite this process by extracting
 knowledge components (terms, concepts, relations between them) from
