--- a/main.tex
+++ b/main.tex
@@ -97,7 +97,7 @@ enhancement
   he2023LanguageModelAnalysis,giglou2025Llms4omMatchingOntologies} tasks.
 However, recent studies highlight that such affordance of information does not
 automatically translate into strong performance of LLMs on all ontology
-learning tasks \cite{bombieri2024DoLlmsDream,wang2024CanLargeLanguage}.
+learning tasks \cite{bombieri2024DoLlmsDream,wang2024Advanced}.
 
 Understanding the specific conditions under which an LLM performs well on an
 ontology learning task is vital to obtain the most reliable performance from
