--- a/main.tex
+++ b/main.tex
@@ -106,10 +106,10 @@ exhibit their understanding of individual-to-concept assertions and concept
 hierarchies. To provide a better understanding of the underlying factors, we
 investigate the effect of several ontology and LLM factors on ontology
 population: the task of adding new individuals to an ontology through concept
-assertions.  We investigate the effect of the ontology factors: structure,
-taxonomy and entity labels and the LLM factors: LLM choice, prompting
-approach, domain contextualization and response variation over 3 ontologies
-using 4 state-of-the-art LLMs.
+assertions. We investigate the effect of the ontology factors: structure,
+taxonomy and entity labels and the LLM factors: choice of LLM choice,
+modelling objective, prompting approach, domain context and response variation
+over 3 ontologies using 4 state-of-the-art LLMs.
 
 The rest of the paper is structured as follows. In the next section, we
 highlight related work on ontology population and ontology evaluation.  In
