--- a/main.tex
+++ b/main.tex
@@ -119,8 +119,8 @@ factors we investigate in the present work and our experimental setup. Section
 \ref{sec:results} discusses the observed results and Section
 \ref{sec:conclusion} concludes the paper.  We provide all the necessary
 materials required to reproduce our work in an
-\href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}{Anonymous
-  GitHub Repo}.
+\href{https://anonymous.4open.science/r/llm_ontology_awareness-91C4/}
+{Anonymous GitHub Repo}.
 
 \section{Related Work}
 \label{sec:related-work}
