--- a/main.tex
+++ b/main.tex
@@ -74,8 +74,27 @@
 \maketitle              % typeset the header of the contribution
 %
 \begin{abstract}
-The abstract should briefly summarize the contents of the paper in
-150--250 words.
+  While LLMs have proven their performance in many tasks, it is not yet known
+  how different factors, such as prompting strategies, ontology structure and
+  entity label semantics influence LLM-driven ontology learning.  In this
+  paper, we explore the effects of a wide range of ontology-specific and
+  LLM-specific factors on the performance of LLM-supported ontology
+  population: the ontology learning task of adding new instances to an
+  ontology. Using three publicly-available ontologies: Wines, CASE, and
+  Astronomy characterized by differences in structural complexity and entity
+  label semantics, we study the effects of employing different types of LLMs,
+  zero-shot vs. few-shot prompting strategies, and several domain
+  contextualization approaches. We also investigate different temperature
+  settings and their effects on response consistency.  Our findings suggest
+  that generally speaking LLMs are capable to successfully perform ontology
+  population tasks. Under certain conditions, they can struggle with
+  identifying concept hierarchies; yet, few-shot prompting considerably
+  enhances their ability to perform this
+  task. %Domain contextualization plays an important role in ontology population with taxonomy or ontology experts providing the best results.
+% Temperature variation does not significantly enhance performance with larger LLMs being fairly consistent across several repetitions but smaller LLMs exhibiting larger degrees of variability. 
+LLMs are fairly insensitive to temperature variation. Higher temperatures tend to lower their performances, but further exploration is required. Larger LLMs enjoy good response consistency, whereas the results of smaller LLMs have much larger variability. Reasoning LLMs perform better than their conventional LLM counterparts under zero-shot conditions but few-shot prompting strategies on conventional LLMs with even a few examples can provide similar or better performance.
+Our study over three ontologies suggests that higher semantic similarity between concept and instance labels can be a key factor governing an LLM's ability to perform ontology population.
+Future work will focus on the effects of inter-variable interactions, model fine-tuning and other ontology learning tasks.
 
 \keywords{First keyword  \and Second keyword \and Another keyword.}
 \end{abstract}
