--- a/main.tex
+++ b/main.tex
@@ -81,8 +81,7 @@
   LLM-specific factors on the performance of LLM-supported ontology
   population: the ontology learning task of adding new instances to an
   ontology. Using three publicly-available ontologies: Wines, CASE, and
-  Astronomy characterized by differences in structural complexity and entity
-  label semantics, we study the effects of employing different types of LLMs,
+  Astronomy, we study the effects of employing different types of LLMs,
   zero-shot vs. few-shot prompting strategies, and several domain
   contextualization approaches. We also investigate different temperature
   settings and their effects on response consistency.  Our findings suggest
