--- a/main.tex
+++ b/main.tex
@@ -81,10 +81,10 @@
   LLM-specific factors on the performance of LLM-supported ontology
   population: the ontology learning task of adding new instances to an
   ontology. Using three publicly-available ontologies: Wines, CASE, and
-  Astronomy, we study the effects of employing different types of LLMs,
-  zero-shot vs. few-shot prompting strategies, and several domain
-  contextualization approaches. We also investigate different temperature
-  settings and their effects on response consistency.  Our findings suggest
+  Astronomy, we study the effects of ontology structure, taxonomy and entity
+  label in conjunction with choice of LLM, prompting approaches, domain
+  contexts and response variation on ontology population using LLMs.
+  Our findings suggest
   that generally speaking LLMs are capable to successfully perform ontology
   population tasks. Under certain conditions, they can struggle with
   identifying concept hierarchies; yet, few-shot prompting considerably
