--- a/main.tex
+++ b/main.tex
@@ -83,12 +83,11 @@
   ontology. Using three publicly-available ontologies: Wines, CASE, and
   Astronomy, we study the effects of ontology structure, taxonomy and entity
   label in conjunction with choice of LLM, prompting approaches, domain
-  contexts and response variation on ontology population using LLMs.
-  Our findings suggest
-  that generally speaking LLMs are capable to successfully perform ontology
-  population tasks. Under certain conditions, they can struggle with
-  identifying concept hierarchies; yet, few-shot prompting considerably
-  enhances their ability to perform this
+  contexts and response variation on ontology population using LLMs. Our
+  findings suggest that LLMs are reasonably capable of performing ontology
+  population. Under certain conditions, they can struggle with identifying
+  concept hierarchies; yet, few-shot prompting considerably enhances their
+  ability to perform this
   task. %Domain contextualization plays an important role in ontology population with taxonomy or ontology experts providing the best results.
 % Temperature variation does not significantly enhance performance with larger LLMs being fairly consistent across several repetitions but smaller LLMs exhibiting larger degrees of variability. 
 LLMs are fairly insensitive to temperature variation. Higher temperatures tend to lower their performances, but further exploration is required. Larger LLMs enjoy good response consistency, whereas the results of smaller LLMs have much larger variability. Reasoning LLMs perform better than their conventional LLM counterparts under zero-shot conditions but few-shot prompting strategies on conventional LLMs with even a few examples can provide similar or better performance.
