--- a/main.tex
+++ b/main.tex
@@ -88,9 +88,7 @@
   population. Under certain conditions, they can struggle with identifying
   concept hierarchies; yet, few-shot prompting considerably enhances their
   ability to perform this
-  task. %Domain contextualization plays an important role in ontology population with taxonomy or ontology experts providing the best results.
-% Temperature variation does not significantly enhance performance with larger LLMs being fairly consistent across several repetitions but smaller LLMs exhibiting larger degrees of variability. 
-LLMs are fairly insensitive to temperature variation. Higher temperatures tend to lower their performances, but further exploration is required. Larger LLMs enjoy good response consistency, whereas the results of smaller LLMs have much larger variability. Reasoning LLMs perform better than their conventional LLM counterparts under zero-shot conditions but few-shot prompting strategies on conventional LLMs with even a few examples can provide similar or better performance.
+  task. LLMs are fairly insensitive to temperature variation. Higher temperatures tend to lower their performances, but further exploration is required. Larger LLMs enjoy good response consistency, whereas the results of smaller LLMs have much larger variability. Reasoning LLMs perform better than their conventional LLM counterparts under zero-shot conditions but few-shot prompting strategies on conventional LLMs with even a few examples can provide similar or better performance.
 Our study over three ontologies suggests that higher semantic similarity between concept and instance labels can be a key factor governing an LLM's ability to perform ontology population.
 Future work will focus on the effects of inter-variable interactions, model fine-tuning and other ontology learning tasks.
 
