--- a/main.tex
+++ b/main.tex
@@ -82,7 +82,7 @@
   population: the ontology learning task of adding new instances to an
   ontology. Using three publicly-available ontologies: Wines, CASE, and
   Astronomy, we study the effects of ontology structure, taxonomy and entity
-  label in conjunction with choice of LLM, prompting approaches, domain
+  labels in conjunction with choice of LLM, prompting approaches, domain
   contexts and response variation on ontology population using LLMs. Our
   findings suggest that LLMs are reasonably capable of performing ontology
   population. Under certain conditions, they can struggle with identifying
