--- a/main.tex
+++ b/main.tex
@@ -85,12 +85,23 @@
   labels in conjunction with choice of LLM, prompting approaches, domain
   contexts and response variation on ontology population using LLMs. Our
   findings suggest that LLMs are reasonably capable of performing ontology
-  population. Under certain conditions, they can struggle with identifying
-  concept hierarchies; but, few-shot prompting considerably enhances their
-  ability to perform this
-  task. LLMs are fairly insensitive to temperature variation. Higher temperatures tend to lower their performances, but further exploration is required. Larger LLMs enjoy good response consistency, whereas the results of smaller LLMs have much larger variability. Reasoning LLMs perform better than their conventional LLM counterparts under zero-shot conditions but few-shot prompting strategies on conventional LLMs with even a few examples can provide similar or better performance.
-Our study over three ontologies suggests that higher semantic similarity between concept and instance labels can be a key factor governing an LLM's ability to perform ontology population.
-Future work will focus on the effects of inter-variable interactions, model fine-tuning and other ontology learning tasks.
+  population. Certain structural metrics do not influence their ability to
+  perform ontology population. When dealing with entity labels whose LLM
+  embedding representations deviate from their ontological nature, LLMs can
+  struggle to predict concept hierarchies and may resort to string-based
+  matching. However, few-shot prompting is effective at alleviating these
+  issues.  LLMs are fairly insensitive to temperature
+  variation. Higher temperatures tend to lower their performances, but further
+  exploration is required. Larger LLMs enjoy good response consistency,
+  whereas the results of smaller LLMs have much larger variability. Reasoning
+  LLMs perform better than their conventional LLM counterparts under zero-shot
+  conditions but few-shot prompting strategies on conventional LLMs with even
+  a few examples can provide similar or better performance.  Our study over
+  three ontologies suggests that higher semantic similarity between concept
+  and instance labels can be a key factor governing an LLM's ability to
+  perform ontology population.  Future work will focus on the effects of
+  inter-variable interactions, model fine-tuning and other ontology learning
+  tasks.
 
 \keywords{First keyword  \and Second keyword \and Another keyword.}
 \end{abstract}
