--- a/main.tex
+++ b/main.tex
@@ -92,16 +92,15 @@
   matching. However, few-shot prompting is effective at alleviating these
   issues. Our experimentation finds reasoning LLMs perform better than their
   conventional LLM counterparts under zero-shot conditions but few-shot
-  prompting with conventional LLMs can achieve similar performance.
-  LLMs are fairly insensitive to temperature
-  variation. Higher temperatures tend to lower their performances, but further
-  exploration is required. Larger LLMs enjoy good response consistency,
-  whereas the results of smaller LLMs have much larger variability. Our study over
-  three ontologies suggests that higher semantic similarity between concept
-  and instance labels can be a key factor governing an LLM's ability to
-  perform ontology population.  Future work will focus on the effects of
-  inter-variable interactions, model fine-tuning and other ontology learning
-  tasks.
+  prompting with conventional LLMs can achieve similar performance. Larger
+  LLMs are consistent in their responses with an increase in temperature
+  resulting in a decline in performance. Smaller LLMs have much larger
+  variablity and do not exhibit such performance variation with temperature.
+  Our study over three ontologies suggests that higher semantic similarity
+  between concept and instance labels can be a key factor governing an LLM's
+  ability to perform ontology population.  Future work will focus on the
+  effects of inter-variable interactions, model fine-tuning and other ontology
+  learning tasks.
 
 \keywords{First keyword  \and Second keyword \and Another keyword.}
 \end{abstract}
