--- a/main.tex
+++ b/main.tex
@@ -99,8 +99,8 @@
   Our study over three ontologies suggests that higher semantic similarity
   between concept and instance labels can be a key factor governing an LLM's
   ability to perform ontology population. Future work will focus on the
-  effects of inter-variable interactions, model fine-tuning and other ontology
-  learning tasks.
+  effects of ontology factors defined in the Ontology Learning Layer Cake and
+  on LLM factors emphasizing fine-tuning and advanced prompting approaches.
 
 \keywords{First keyword  \and Second keyword \and Another keyword.}
 \end{abstract}
