--- a/main.tex
+++ b/main.tex
@@ -102,8 +102,10 @@
   effects of ontology factors defined in the Ontology Learning Layer Cake, on
   LLM factors emphasizing fine-tuning and advanced prompting approaches and,
   on complex inter-factor effects.
+  
+  \keywords{ Ontology Population \and Ontology Learning \and Ontology
+    Engineering \and Large Language Model \and LLM Prompting}
 
-\keywords{First keyword  \and Second keyword \and Another keyword.}
 \end{abstract}
 %
 \section{Introduction}
