--- a/main.tex
+++ b/main.tex
@@ -104,7 +104,7 @@
   on complex inter-factor effects.
   
   \keywords{ Ontology Population \and Ontology Learning \and Ontology
-    Engineering \and Large Language Model \and LLM Prompting}
+    Engineering \and Large Language Model \and LLM Prompting \and Evaluation}
 
 \end{abstract}
 %
