--- a/main.tex
+++ b/main.tex
@@ -1308,7 +1308,7 @@ models, we observe that GPT-4o, when provided with a few examples (Table
 conditions. Further experimentation with few-shot prompting reasoning models
 would make it clearer if reasoning models are better at supporting ontology
 learning; however, recent works
-\cite{wang2024Advanced,nori2024Medprompt,guo2025DeepSeek} suggest that
+\cite{wang2024DoAdvancedLanguage,nori2024MedpromptO1Exploration,guo2025DeepSeek} suggest that
 reasoning models do not benefit significantly from few-shot prompting and may
 even lead to degradation in performance in some situations.
 
