--- a/main.tex
+++ b/main.tex
@@ -1302,15 +1302,15 @@ indicating the potential of reasoning LLMs for ontology-related tasks. Despite
 DeepSeek's R1-Distil-Llama-8B being a reasoning LLM , it has the worst
 performance among all 4 models. Further prompt engineering could improve
 results of the smaller reasoning models, but our experimentation highlights
-that reasoning LLMs do not always outperform general LLMs. For larger
-models, we observe that GPT-4o, when provided with a few examples (Table
+that reasoning LLMs do not always outperform general LLMs. For larger models,
+we observe that GPT-4o, when provided with a few examples (Table
 \ref{tab:results}), performs as well as o1-preview under zero-shot
 conditions. Further experimentation with few-shot prompting reasoning models
 would make it clearer if reasoning models are better at supporting ontology
 learning; however, recent works
-\cite{wang2024DoAdvancedLanguage,nori2024MedpromptO1Exploration,deepseekai2025DeepseekR1Incentivizing} suggest that
-reasoning models do not benefit significantly from few-shot prompting and may
-even lead to degradation in performance in some situations.
+\cite{wang2024DoAdvancedLanguage,nori2024MedpromptO1Exploration,deepseekai2025DeepseekR1Incentivizing}
+suggest that reasoning models do not benefit significantly from few-shot
+prompting and may even lead to degradation in performance in some situations.
 
 \begin{figure}
   \begin{subfigure}{0.5\textwidth}
